--- a/Source/Satis.ModelViewer/App.xaml
+++ b/Source/Satis.ModelViewer/App.xaml
@@ -1,4 +1,4 @@
 ﻿<gemini:GeminiApplication x:Class="Satis.ModelViewer.App"
 													xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 													xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-													xmlns:gemini="clr-namespace:Gemini.Host;assembly=Gemini" />
+													xmlns:gemini="clr-namespace:Gemini;assembly=Gemini" />
